Issue #17715: Add missing NULL Check to PyNumber_Long.